...
    <string name="save">저장하기</string>
    <string name="memoDateFrom">0000.0.00</string>
    <string name="memoDateTo">0000.00.00</string>
    <string name="memo">사소한 행복을 기록해 보세요</string>
    <string name="howHappy">얼마나 행복하셨습니까?</string>
    <string name="cancel">취소</string>
    <string name="OK">확인</string>
    <string name="memoContentEmpty">"행복을 메모해 주세요:)"</string>
    <string name="memoPriceEmpty">"얼마나 행복하셨나요?:D"</string>
    <string name="memoPriceOver">"최대 2,147,483,647까지 입력할 수 있습니다 ;) \n 물론 여러분의 행복 가격은 무한대이지만요 B-)"</string>
    <string name="cantLoadImg">"이미지를 불러올 수 없습니다"</string>
    <string name="imageType">jpg, jpeg, png 이미지만 첨부할 수 있습니다</string>

    <string name="arrowForward">앞으로 이동</string>
    <string name="arrowBack">뒤로 이동</string>
    <string name="cloverIcon">메모 가격 앞에 표시된 클로버 아이콘</string>

    <string name="manual">사용 방법</string>
    <string name="single">한 줄 보기</string>
    <string name="multiple">두 줄 보기</string>
    <string name="ellipsis">줄임표 표시</string>
    <string name="font">글자 크기</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="export">내보내기</string>
    <string name="pdf">pdf</string>
    <string name="excel">csv</string>
    <string name="txt">txt</string>
    <string name="openSource">오픈 소스</string>
    <string name="doExport">파일을 생성하시겠습니까?</string>
    <string name="noMemo">저장된 메모 내역이 없습니다</string>
    <string name="savePermissionYes">파일 생성을 시작합니다</string>
    <string name="savePermissionNo">저장 접근 권한을 취소하였습니다 \n 파일 생성을 위해 허용해 주세요</string>
    <string name="completeSaving">파일 생성이 완료되었습니다</string>
    <string name="close">닫기</string>
    <string name="manualDialog">\n• 행복 통장은 메모 작성 후 수정 및 삭제가 되지 않습니다\n
                                • 앱 삭제 후 재설치 시 작성된 메모는 초기화됩니다\n
                                • 메모 작성 시 이미지는 한 개만 업로드 가능합니다\n
                                • 검색 조건 설정의 조회 기간 글씨를 클릭하면 검색 조회 기간을 설정할 수 있습니다\n
                                • 메모 작성 시 날짜 글씨를 클릭하면 메모 작성 날짜를 바꿀 수 있습니다\n
                                • 설정 화면의 한 줄 보기/두 줄 보기, 줄임표 표시, 글자 크기는 메모 글씨에만 적용이 됩니다\n
                                • 메모를 파일로 내보낼 때 기본 저장 위치는 storage/emulated/0/HappyBank 또는 storage/emulated/0/Download입니다\n</string>
...
