<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/txtNumber"
            android:maxLines="2"
            android:ellipsize="middle"
            style="@style/memo_list.green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/inputTxtDate"
            app:layout_constraintHorizontal_weight="1"
            />

        <TextView
            android:id="@+id/inputTxtDate"
            style="@style/memo_list.green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtNumber"
            app:layout_constraintEnd_toStartOf="@id/inputTxtContent"
            app:layout_constraintHorizontal_weight="1"
            />

        <TextView
            android:id="@+id/inputTxtContent"
            android:maxLines="2"
            android:ellipsize="end"
            style="@style/memo_list.green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/inputTxtDate"
            app:layout_constraintEnd_toStartOf="@id/inputTxtDeposit"
            app:layout_constraintHorizontal_weight="3"
            />

        <TextView
            android:id="@+id/inputTxtDeposit"
            android:maxLines="2"
            android:ellipsize="end"
            style="@style/memo_list.green"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/inputTxtContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            />

</androidx.constraintlayout.widget.ConstraintLayout>